BA_2grid_Cheb.txt
nohup: ignoring input
  File "run_RG_explainer.py", line 71
    self.device = if args.gpu: torch.device('cuda') else torch.device('cpu')
                   ^
SyntaxError: invalid syntax
